Adding runonce to migrate old values for date direction

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
         "contao": {
             "sources":{
                 "": "system/modules/calendarfield"
-            }
+            },
+            "runonce": [
+                "runonce/runonce.php"
+            ]
         }
     }
 }
