Moved and renamed runonce script to avoid deleting by Contao

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
                 "": "system/modules/calendarfield"
             },
             "runonce": [
-                "runonce/runonce.php"
+                "config/update.php"
             ]
         }
     }
