--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,42 @@
 {
-    "name":"terminal42/contao-calendarfield",
-    "description":"Frontend Text Field with Datepicker for Contao Open Source CMS",
-    "keywords":["contao", "Calendar", "Calendar Field", "Datepicker"],
+    "name":"friends-of-contao/contao-jcalendarfield",
+    "description":"Frontend Text Field with Datepicker for Contao Open Source CMS (uses jQuery)",
+    "keywords":["contao", "Calendar", "Calendar Field", "Datepicker", "jQuery"],
     "type":"contao-module",
     "license":"LGPL-3.0+",
     "authors":[
         {
             "name":"terminal42 gmbh",
             "homepage":"http://terminal42.ch"
+        },
+        {
+            "name": "Cliff Parnitzky",
+            "homepage": "https://contao.cliff-parnitzky.de",
+            "email": "contao@cliff-parnitzky.de",
+            "role": "Developer"
         }
     ],
     "require":{
-        "php":">=5.3.2",
-        "contao/core":">=3.2",
-        "contao-community-alliance/composer-installer":"*"
+        "php": ">=5.3",
+        "contao/core": ">=3.2.0,<3.6",
+        "contao-community-alliance/composer-plugin": "~2.0"
     },
-    "replace": {
-        "contao-legacy/calendarfield": "self.version"
+    "conflict": {
+        "contao/core":"3.4.0,3.4.1,3.4.2" 
     },
     "extra":{
         "contao": {
             "sources":{
-                "": "system/modules/calendarfield"
+                "contao": "system/modules/jcalendarfield"
             },
             "runonce": [
-                "config/update.php"
+                "runonce/update.php"
             ]
+        },
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
         }
-    }
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
