Use correct email

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         {
             "name": "Nicky Hoff",
             "homepage": "https://hofff.com",
-            "email": "nicky@hofff.com",
+            "email": "nick@hofff.com",
             "role": "Manager"
         }
     ],
