--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name":"hofff/contao-jcalendarfield",
-    "description":"Frontend Text Field with Datepicker for Contao Open Source CMS (uses jQuery)",
+    "description":"Frontend text field with datepicker for Contao Open Source CMS (uses jQuery)",
     "keywords":["contao", "Calendar", "Calendar Field", "Datepicker", "jQuery"],
     "type":"contao-module",
     "license":"LGPL-3.0+",
