--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":"hofff/contao-jcalendarfield",
+    "name":"hofff/contao-calendarfield",
     "description":"Frontend text field with datepicker for Contao Open Source CMS (uses jQuery)",
     "keywords":["contao", "Calendar", "Calendar Field", "Datepicker", "jQuery"],
     "type":"contao-module",
@@ -28,6 +28,10 @@
         "php": ">=5.3",
         "contao/core": ">=3.2.0,<3.6",
         "contao-community-alliance/composer-plugin": "~2.0"
+    },
+    "replace": {
+        "contao-legacy/calendarfield": "self.version",
+        "terminal42/contao-calendarfield": "self.version"
     },
     "conflict": {
         "contao/core":"3.4.0,3.4.1,3.4.2" 
