--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name":"hofff/contao-calendarfield",
     "description":"Frontend text field with datepicker for Contao Open Source CMS",
     "keywords":["contao", "calendar", "calendar field", "datepicker", "forms"],
-    "type":"contao-module",
+    "type":"contao-bundle",
     "license":"LGPL-3.0-or-later",
     "homepage" : "https://hofff.com",
     "authors":[
@@ -25,7 +25,7 @@
         }
     ],
     "require":{
-        "php": ">=7.4",
+        "php": ">=7.3",
         "contao/core-bundle":"~4.9",
         "menatwork/contao-multicolumnwizard-bundle":"~3.4"
     },
