--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,8 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.1",
-        "contao/core-bundle": "^4.13 || ^5.1",
+        "php": "^8.1",
+        "contao/core-bundle": "^5.1",
         "menatwork/contao-multicolumnwizard-bundle": "~3.4"
     },
     "autoload": {
@@ -55,7 +55,7 @@
     "extra": {
         "contao-manager-plugin": "Hofff\\CalendarfieldBundle\\ContaoManager\\Plugin",
         "branch-alias": {
-            "dev-master": "4.0.x-dev"
+            "dev-master": "5.0.x-dev"
         }
     },
     "prefer-stable": true,
